fix padding on mobile

--- a/src/app/todos/todos.component.scss
+++ b/src/app/todos/todos.component.scss
@@ -115,7 +115,7 @@
 		padding: 1.5rem;
 	}
 	.list {
-		padding: 2rem 1.15rem;
+		padding: 2rem 1.25rem 0;
 	}
 	.icon {
 		margin-right: 0;
